--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/DazingPluto/repo-dazingpluto-node2/issues"
   },
-  "homepage": "https://github.com/DazingPluto/repo-dazingpluto-node2#readme"
+  "homepage": "https://github.com/DazingPluto/repo-dazingpluto-node2#readme",
+  "dependencies": {
+    "axios": "^0.24.0",
+    "faker": "^5.5.3"
+  }
 }
